--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#d4af37",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/logoo.PNG",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/logoo.PNG",
       "sizes": "512x512",
       "type": "image/png"
     }
